Adepted new style

--- a/templates/etc/monit/conf.d/webserver.j2
+++ b/templates/etc/monit/conf.d/webserver.j2
@@ -1,2 +1,2 @@
-set httpd port {{ monit_webserver_http_port }}
-  allow {{ monit_webserver_username }}:{{ monit_webserver_password }}
+set httpd port {{ monit_http_port }}
+  allow {{ monit_username }}:{{ monit_password }}
